--- a/west.yml
+++ b/west.yml
@@ -20,6 +20,9 @@ manifest:
     # NCS repositories are hosted here.
     - name: ncs
       url-base: https://github.com/nrfconnect
+    # Custom forked repository sources:
+    - name: sradcliffe
+      url-base: https://github.com/sradcliffe-nottinghamspirk
     # Third-party repository sources:
     - name: zephyrproject
       url-base: https://github.com/zephyrproject-rtos
@@ -61,7 +64,8 @@ manifest:
     # https://developer.nordicsemi.com/nRF_Connect_SDK/doc/latest/zephyr/guides/modules.html
     - name: zephyr
       repo-path: sdk-zephyr
-      revision: v3.4.99-ncs1
+      remote: sradcliffe
+      revision: feature/develop
       import:
         # In addition to the zephyr repository itself, NCS also
         # imports the contents of zephyr/west.yml at the above
